--- a/burger-builder/src/components/Navigation/SideDrawer/SideDrawer.module.css
+++ b/burger-builder/src/components/Navigation/SideDrawer/SideDrawer.module.css
@@ -18,10 +18,14 @@
   }
 }
 
-.Опен {
+.Open {
   transform: translateX(0);
 }
 
 .Close {
   transform: translateX(-100%);
+}
+
+.Logo{
+  height: 11%;
 }
